# An-Intelligent-Workflow-Generator-with-GenAI-Based-Hallucination-Mitigation

./: .gitignore  IMPLEMENTATION_COMPLETE.md  LLM_SETUP.md  README.md  SYSTEM_STATUS.md  app.py  debug_response.py  pyproject.toml  render.yaml  run_server.py  test_all_domains.py  test_generation.py  test_json_prompt.py  test_model.py  test_ollama.py  test_ollama_raw.py  test_rag_context.py
data/training/: all_domains_training.jsonl
datasets/: ci_cd_deployment.json  data_pipeline.json  incident_response.json  insurance_claim_processing.json  loan_approval.json  online_payment.json  order_fulfillment.json  user_registration.json
playground/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
playground/src/: App.module.css  App.tsx  TODO.md
rag/: __init__.py  embedding.py  mock_store.py  populate_store.py  retriever.py  vector_store.py
rag/.vectorstore/: mock_chunks.json
scripts/: setup_llm.py
src/: __init__.py  config.py  pipeline.py
src/api/: exceptions.py  landing.py  middleware.py  server.py
src/engines/: __init__.py  domain_engine.py  finetuning.py  flowchart_generator.py  hallucination_mitigation.py  input_adapter.py  instruction_parser.py  layout_engine.py  llm_flowchart_generator.py  (+6 more)
tests/: conftest.py  test_benchmark.py  test_domain_engine.py  test_flowchart_generator.py  test_flowchart_pipeline.py  test_hallucination_mitigation.py  test_instruction_parser.py  test_layout_engine.py  test_pipeline.py  test_rag_integration.py  test_validation_engine.py  test_workflow_generator.py
(+45 files in other folders)
